**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.16 beta
------------------------
  - Fixed defect #383 UTF-8 Encoding for Movie object - Allows extended character sets in the movie details
  - Enhancement  #418 Option to exclude files without external subtitles
  - Fixed defect #422 Encoding problems with link of accentuated categories or two words categories on Categories.html
  - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
  - Enhancement  #437 Improvements to multi-episode file support.
  - Enhancement  #442 Added proxy support
  - Enhancement  #444 New plugin to retrieve movie data from Russian movie database www.kinopoisk.ru
  - Fixed defect #449 Trailers are not excluded from the Year categories
  - Fixed defect #451 Allocine Plugin didn't work anymore.
  
MovieJukebox 1.0.15 beta
------------------------
  - Enhancement   #72 Support for multi-episode files and folders
  - Enhancement   #90 Skins now have the ability to wrap around from the last index page to the first and vice versa 
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #250 So how do we customize the categories?
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #281 Support DVD order from TheTVDB.com
  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #346 Errors on multiple part movies - empty details html file
  - Enhancement  #348 Enhanced BD-50 Disk RIP Scanner
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work