@@ -210,3 +210,14 @@ mjb.subtitles.ExcludeFilesWithoutExternal=false
 # These two parameters are optional, if you need to supply a username and password for the proxy server.
 #mjb.ProxyUsername=
 #mjb.ProxyPassword=
+
+
+######################################################
+## Apple Trailers plugin parameters
+#
+# the desired resolution of trailers from apple trailers site
+# valid resolutions are: 1080p 720p 480p 640
+# leave this blank or commented out to disable this feature
+#appletrailers.resolution=720p
+# flag for selecting download of the movie trailers (true), or streaming over the internet (false)
+#appletrailers.download=false
